fix: corepackのバグで検証失敗するので仮処置

--- a/misskey/compose.yaml
+++ b/misskey/compose.yaml
@@ -16,6 +16,8 @@ services:
   app:
     image: ghcr.io/team-shahu/misskey:latest
     restart: always
+    environment:
+      COREPACK_INTEGRITY_KEYS: 0
     links:
       - db
       - keydb
