--- a/misskey/.config/Caddyfile
+++ b/misskey/.config/Caddyfile
@@ -1,5 +1,5 @@
 shahu.ski {
-	tls admin@shahu.ski
+	tls /etc/ssl/certs/certificate.pem /etc/ssl/private/key.pem
 	encode gzip
 	header /assets Cache-Control "public, max-age=31536000, immutable" 
 	file_server
