--- a/.github/workflows/update_submodules.yml
+++ b/.github/workflows/update_submodules.yml
@@ -23,7 +23,7 @@ jobs:
         submodules: recursive
     - name: Update submodules
       id: update
-      run: git submodule update --remote --recursive 
+      run: git submodule foreach git pull origin main
     - name: Run git status
       id: status
       run: echo "::set-output name=status::$(git status -s)"
