--- a/.github/workflows/update_submodules.yml
+++ b/.github/workflows/update_submodules.yml
@@ -27,7 +27,7 @@ jobs:
         git config --global protocol.file.allow always
         git submodule init
         git submodule update
-        git submodule foreach git pull main
+        git submodule foreach git pull origin main
     - name: Commit and push changes
       run: |
         git config --global user.name "github-actions[bot]"
