enhance: バックアップ関連を更新

--- a/misskey/compose.yaml
+++ b/misskey/compose.yaml
@@ -76,6 +76,34 @@ services:
     networks:
       - internal_network
 
+  backup:
+    image: ghcr.io/team-shahu/misskey-backup:latest
+    container_name: misskey-backup-go
+    restart: always
+    environment:
+      TZ: Asia/Tokyo
+    networks:
+      - misskey-postgres
+    env_file:
+      - ./config/.env
+    volumes:
+      - mi-backups:/app/backups
+      - ./config:/app/config:ro
+    logging:
+      options:
+        max-size: 5m
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: '1g'
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 1m
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+
 networks:
   internal_network:
   misskey-postgres:
