--- a/misskey/.config/.env.sample
+++ b/misskey/.config/.env.sample
@@ -1,9 +1,24 @@
 # db settings
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 POSTGRES_PASSWORD=
 POSTGRES_USER=
 POSTGRES_DB=mk1
-DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}"
+DATABASE_URL="postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
+
+# backup settings
+BACKUP_DIR=/app/backups
+BACKUP_RETENTION=30
+COMPRESSION_LEVEL=3
+BACKUP_ENDPOINT=
+BACKUP_ACCESS_KEY_ID=
+BACKUP_SECRET_ACCESS_KEY=
+R2_BUCKET_NAME=
+R2_PREFIX=pg-backup
+BACKUP_BUCKET_ACL=private
+NOTIFICATION=true
+DISCORD_WEBHOOK_URL=
+CRON_SCHEDULE=0 5,17 * * *
 
 # cf Tunnel
 TUNNEL_TOKEN=
-
