feat: misskey-tempuraに変更

--- a/misskey/compose.yaml
+++ b/misskey/compose.yaml
@@ -16,7 +16,7 @@ services:
       - internal_network
 
   app:
-    image: ghcr.io/team-shahu/misskey:latest
+    image: ghcr.io/lqvp/misskey-tempura:latest
     restart: always
     environment:
       COREPACK_INTEGRITY_KEYS: 0
