--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 *.env
 
+/misskey/.config/default.yml
+/misskey/.config/certificate.pem
+/misskey/.config/key.pem
+
 /misskey/data/
 /misskey-backup/config/*.tar
