--- a/.config/.env.sample
+++ b/.config/.env.sample
@@ -16,6 +16,7 @@ BACKUP_SECRET_ACCESS_KEY=
 R2_BUCKET_NAME=
 R2_PREFIX=pg-backup
 BACKUP_BUCKET_ACL=private
+BACKUP_ENCRYPTION_KEY=
 NOTIFICATION=true
 DISCORD_WEBHOOK_URL=
 CRON_SCHEDULE=0 5,17 * * *
