--- a/compose.yaml
+++ b/compose.yaml
@@ -100,8 +100,9 @@ services:
       - .config/.env
     networks:
       - internal_network
+
   backup:
-    image: ghcr.io/team-shahu/misskey-backup:2025.12.17@
+    image: ghcr.io/team-shahu/misskey-backup:2025.12.17@sha256:c2d841c62e422da41fbd19d46da5c030364c29c3d0f33f6782601d491fba4092
     container_name: misskey-backup-go
     restart: always
     environment:
